# ferris-fetch

./: .envrc  .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  treefmt.nix
.github/workflows/: ci.yaml  ci.yml  format.yaml
src/: main.rs
