[package]
name = "ferris-fetch"
version = "0.1.0"
edition = "2021"
authors = ["NORMAL-EX <normal-ex@cloud-pe.cn>"]
description = "🦀 A fast and cute system information tool written in Rust, featuring Ferris the crab!"
license = "MIT"
repository = "https://github.com/NORMAL-EX/ferris-fetch"
keywords = ["system-info", "neofetch", "ferris", "rust", "cli"]
categories = ["command-line-utilities", "os"]
readme = "README.md"

[dependencies]
sysinfo = "0.32"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
whoami = "1.5"
os_info = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
