[package]
name = "ferrisfetch"
version = "0.0.1"
edition = "2024"
authors = ["MCSeekeri <mcseekeri@outlook.com>"]
description = "Fast and cute system information tool written in Rust, featuring Ferris the crab!"
license = "MIT"
repository = "https://github.com/MCSeekeri/ferrisfetch"
categories = ["command-line-utilities", "os"]
readme = "README.md"

[dependencies]
sysinfo = "0.38"
colored = "3.1"
clap = { version = "4.5", features = ["derive"] }
whoami = "2.1"
os_info = "3.14"
image = { version = "0.25", default-features = false }
resvg = { version = "0.46", default-features = false, features = ["text"] }
viuer = "0.11"
crossterm = "0.29"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
